# switchy

./: AUTHORS  ChangeLog  Makefile.am  README  TODO  aclocal.m4  autogen.sh  config.status  configure.in
data/: Makefile.am  superswitcher.SuperSwitcher.service.in
debian/: README.Debian  changelog  control  copyright  rules
src/: Makefile.am  dbus-object.c  dbus-object.h  dbus-server-bindings.h  dbus.xml  draganddrop.c  draganddrop.h  forward_declarations.h  popup.c  popup.h  screen.c  screen.h  superswitcher.c  thumbnailer.c  thumbnailer.h  window.c  window.h  workspace.c  workspace.h  xinerama.c  xinerama.h
tests/scripts/: flash_ss_popup_n_times.py  hide_ss_popup.py  show_ss_popup.py  toggle_ss_popup.py
